force-app/main/default/objects/InstallationCompletionNotification__mdt/InstallationCompletionNotification__mdt.object-meta.xml
<CustomObject>
    <description>Configuração de notificação por e-mail quando a instalação é concluída.</description>
    <label>Notificação de Conclusão de Instalação</label>
    <pluralLabel>Notificações de Conclusão de Instalação</pluralLabel>
</CustomObject>