force-app/main/default/objects/InstallationCompletionNotification__mdt/fields/CompletedStatuses__c.field-meta.xml
<CustomField>
    <fullName>CompletedStatuses__c</fullName>
    <description>Status que devem disparar a notificação (separados por ;).</description>
    <label>Status de Conclusão</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>