force-app/main/default/objects/InstallationCompletionNotification__mdt/fields/RecipientEmails__c.field-meta.xml
<CustomField>
    <fullName>RecipientEmails__c</fullName>
    <description>E-mails destinatários separados por ; ou ,.</description>
    <label>E-mails Destinatários</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>